updated to version 0.9.2
Refactored and extended code to use settings dialog, extended meson.build

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,8 @@ _build-dir/
 .flatpak-builder/
 _tmp/
 _repo/
+src/free.toq.finden.gresource.c
 src/finden
+src/toq-finden
+src/toq-miniterm
 free.toq.finden.flatpak
